--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <a>
+                        <a href="https://github.com/Normal-user69/download_smart_app/raw/main/el3asher.apk" target="_blank">
                             <div class="download">
                                 <h1>Download</h1>
                             </div>
