Added download from google play

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
                 </tr>
             </tbody>
         </table>
-
+        <a href="https://play.google.com/store/apps/details?id=com.smart.courses">
+            <div>
+                <img src="gpstore.png" alt="store" width="300vh">
+            </div>
         <div class="popup">
             <img src="logo.png" alt="logo" class="pop_img">
             <h1 class="pop_title">
