Removed download from drive

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <tbody>
                 <tr>
                     <td>
-                        <a href="https://drive.google.com/uc?export=download&id=1vOSy04ryDZs0RREeb-I1bST8zgJn7NLg" target="_blank">
+                        <a href="https://github.com/Normal-user69/download_smart_app/raw/main/app.apk" target="_blank">
                             <div class="download">
                                 <h1>Download</h1>
                             </div>
