--- a/index.html
+++ b/index.html
@@ -40,13 +40,25 @@
                         </a>
                     </td>
                 </tr>
+                <tr>
+                    <td>
+                        <a href="https://play.google.com/store/apps/details?id=com.smart.courses">
+                            <div>
+                                <img src="gpstore.png" alt="store" width="170vh">
+                            </div>
+                        </a>
+                    </td>
+                    <td>
+                        <a href="">
+                            <div>
+                                <img src="appstore.svg" alt="store" width="150vh">
+                            </div>
+                        </a>
+                    </td>
+                </tr>
             </tbody>
         </table>
-        <a href="https://play.google.com/store/apps/details?id=com.smart.courses">
-            <div>
-                <img src="gpstore.png" alt="store" width="300vh">
-            </div>
-        </a>
+
         <div class="popup">
             <img src="logo.png" alt="logo" class="pop_img">
             <h1 class="pop_title">
@@ -67,7 +79,6 @@
                 </div>
             </a>
         </div>
-
     </div>
     <script>
 let popup = document.querySelector(".popup");
