Added app store link

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </a>
                     </td>
                     <td>
-                        <a href="">
+                        <a href="https://main--papaya-gumdrop-f65c47.netlify.app/">
                             <div>
                                 <img src="appstore.svg" alt="store" width="150vh">
                             </div>
